# SimpleTracker

./: Cargo.toml  README.md  milestone-4.csv
cli/: Cargo.toml
cli/src/: actors.rs  api.rs  config.rs  main.rs  read_optimised_circular_buffer.rs
cli/src/actors/: deque_actor.rs  fetch_actor.rs  messages.rs  output_actor.rs  performance_actor.rs
lib/: Cargo.toml
lib/benches/: performance_indicators.rs
lib/src/: formatter.rs  lib.rs  performance_indicators.rs  ticker.rs
lib/src/formatter/: percentage.rs
src/: config.rs  fetch_actor.rs  formatter.rs  main.rs  mockYahooData.json  output.rs  output_actor.rs  performance_actor.rs  performance_indicators.rs  price.rs  ticker.rs
src/actors/: fetch_actor.rs  output_actor.rs  performance_actor.rs
src/formatter/: percentage.rs  price.rs
