[package]
name = "cli"
version = "0.1.0"
authors = ["Mohammed Daudali <mdaudali786@gmail.com>"]
edition = "2018"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = {"version" = "1.2.2"}
clap = "2.33.3"
strum = "0.21.0"
chrono = {version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
csv = "1.1"
async-std = {version = "1", features = ["attributes", "tokio1"]}
futures = "0.3"
xactor = "0.7"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
bounded-vec-deque = "0.1"
warp = "0.3"
lib = { path = "../lib" }
[dev-dependencies]
serde_json = "1.0"