[package]
name = "lib"
version = "0.1.0"
authors = ["Mohammed Daudali <mdaudali786@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
chrono = {version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
async-std = {version = "1", features = ["attributes"]}
futures = "0.3"
async-trait = "0.1"
log = "0.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "performance_indicators"
harness = false

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"